--- a/Resources/Pages/Components/world.html
+++ b/Resources/Pages/Components/world.html
@@ -1,1 +1,3 @@
-<span><r-slot>Heroes!</r-slot></span>
+<r-require name="context" type="ExampleProtocol" label="superheroes" />
+
+<span><r-slot>Heroes!</r-slot> [context: \(context.example)]</span>
