Added am optional 'local-only' attribute to a r-reqired tag

--- a/Resources/Pages/Components/hello-me.html
+++ b/Resources/Pages/Components/hello-me.html
@@ -1,1 +1,3 @@
-Hello, <r-slot>Friend!</r-slot>
+<r-require name="name" type="String" default='"no-name"' local-only />
+
+Hello, <r-slot>Friend!</r-slot> [extra name: \(name)]
